# ComfyUI-SpeechGod

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
assets/default_voices/: README.txt
core/: characters.py  dsp.py  emotion.py  engines.py  parser.py
workflows/: Speech-God.json  example_cartoon_characters.json  example_multi_character.json  example_narrator.json  example_single_character.json  example_voice_cloning.json
